# the_ray_tracer_challenge_in_rust

./: .gitignore  Cargo.toml  README.md  WASM_README.md  rustfmt.toml
src/: animator.rs  body.rs  camera.rs  canvas.rs  computed_intersection.rs  fuzzy_eq.rs  intersections.rs  lib.rs  light.rs  main.rs  material.rs  matrix.rs  pattern.rs  plane.rs  ray.rs  sphere.rs  tuple.rs  util.rs  world.rs  world_loader.rs
src/canvas/: to_png.rs  to_ppm.rs  to_rgba32.rs
src/world_loader/: yaml.rs
worlds/: amiga_boing_balleske.yaml  three_spheres_and_a_floor.yaml  three_spheres_and_a_floor_with_checkerboard_patterns.yaml  three_spheres_and_a_floor_with_patterns.yaml  three_spheres_and_a_floor_with_striped_pattern.yaml  three_spheres_reflective.yaml
www/: index.js  package-lock.json  package.json  render.worker.js  webpack.config.js
