[package]
name = "the_ray_tracer_challenge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.8"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-for-all", "run-cargo-test", "run-cargo-clippy"]
