[package]
name = "the_ray_tracer_challenge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.8"
indicatif = "0.16.2"
rayon = "1.5.1"
itertools = "0.10.1"
yaml-rust = "0.4.5"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["prepush-hook", "run-for-all", "run-cargo-test", "run-cargo-clippy"]
